# fortehack

./: .gitignore  onedrive.txt
backend/: .gitignore  README.md  debug_schema.json  pyproject.toml  test_output.ts
backend/app/: main.py  state_container.py
backend/app/agents/: analyst.py  chat.py  checker.py  extractor.py  mermaid.py  use_case.py  workbook.py
backend/app/agents/prompts/: mermaid.py  use_case.py  workbook.py
backend/app/api/: websockets.py
backend/app/config/: settings.py
backend/app/core/: config.py  gap_engine.py  orchestrator.py
backend/app/core/interfaces/: policy_store.py  repository.py
backend/app/core/llm/: exceptions.py  groq_client.py  interface.py  openai_client.py  types.py
backend/app/core/persistence/: file_repo.py  interface.py
backend/app/core/rules/: gap_strategies.py
backend/app/core/services/: artifact_strategies.py  brd_publisher.py  confluence_service.py  context.py  edit_strategies.py  mapper.py  markdown_generator.py  publisher.py  requirements.py  search_strategies.py  state_manager.py  validator.py
backend/app/core/strategies/: factory.py
backend/app/domain/: gap_rules.py
backend/app/schemas/: contract.py
backend/app/utils/: logger.py
backend/config/: settings.py  triggers.py
backend/core/: classifier.py  processor.py  state_manager.py  utils.py
backend/core/content/: diagrams.py
backend/core/domain/: models.py
backend/core/extraction/: implementations.py  interface.py  llm_extractor.py
backend/core/llm/: interface.py  prompts.py
backend/core/strategies/: implementations.py  interface.py
(+80 files in other folders)
